tests/sksl/errors/golden/IntFloatMismatch.glsl
### Compilation failed:

error: 16: type mismatch: '=' cannot operate on 'int', 'float'
error: 17: type mismatch: '=' cannot operate on 'int', 'float'
2 errors
